--- a/src/App.css
+++ b/src/App.css
@@ -41,4 +41,28 @@
      background-color: rgb(179, 255, 0);
    }
 
+   .responsive {
+     padding:20px;
+     background:#61dafb;
+     margin-bottom: 10px;
+
+   }
+
+   @media ( min-width: 700px)
+   {
+     .responsive{
+       display:inline-block;
+       width:25%;
+     }
+    }
+
+    @media ( max-width: 500px){
+     .responsive{
+      display:block;
+      width:100%;
+    }
+   }
+
+
+
 
